[tool.black]
line-length = 120
skip-string-normalization = '1'
exclude = '''
/(
  | env
  | proto
  |local_settings.py
)/
'''


[tool.poetry]
name = "gg-subscription-service"
version = "3.15.4"
description = ""
authors = ["Anton Ogorodnikov"]

[tool.poetry.dependencies]
python = "3.8"
grpcio-tools = "1.29.0"
googleapis-common-protos = "1.51.0"
pydantic = "^1.5.1"
click = "^7.1.2"
sentry-sdk = "^0.14.3"
python-json-logger = "0.1.11"
prometheus-client = "0.8.0"
grpclib = "^0.3.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
autoflake = "1.3.1"
black = "19.3b0"
flake8 = "3.7.9"
ipdb = "0.13.2"
isort = "4.3.21"
mypy = "0.770"
mypy-protobuf = "1.21"
pipdeptree = "0.13.2"
poetry = "1.0.5"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
